--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "app.d.ts",
+    "nativewind-env.d.ts"
   ]
 }
